...
            android:id="@+id/classProgress"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ivRemove"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="60" />

        <TextView
            android:id="@+id/txtClassProgress"
            android:layout_width="wrap_content"
...
